--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -1,6 +1,6 @@
 
 
-    <form class="{{cssClass}} new-skill flexcol">
+    <form class="{{cssClass}} item-sheet new-skill flexcol">
         {{> "system/fortyk/templates/item/item-header.html"}}
         <div class="flexcol">
             <label>Skill Type:</label>
@@ -51,7 +51,7 @@
         <label>Skill Use:</label>
             <input type="text" class="skill-use skill-dialog" name="data.skillUse.value" value="{{data.skillUse.value}}" data-dtype="String" required>
         </div>
-        <div class="flexcol">
+        <div class="item-description">
         <label>Skill Description:</label>
             {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
         </div>
