--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -1,4 +1,5 @@
-<form class="{{cssClass}} flexcol">
+<form class="{{cssClass}} item-sheet flexcol">
+    <div class="grid grid-2col">
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{item.name}}" name="name">
@@ -47,7 +48,8 @@
         <label>Weapon Types:</label>
         <input type="text" value="{{data.class.value}}" name="data.class.value">
     </div>
-    <div class="flexcol">
+        </div>
+    <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
