--- a/templates/item/item-aptitude-sheet.html
+++ b/templates/item/item-aptitude-sheet.html
@@ -1,9 +1,9 @@
-<form class="{{cssClass}} flexcol">
+<form class="{{cssClass}} item-sheet flexcol">
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{item.name}}" name="name">
     </div>
-    <div class="flexcol">
+    <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
