--- a/templates/item/item-forceField-sheet.html
+++ b/templates/item/item-forceField-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} flexcol">
+<form class="{{cssClass}} item-sheet flexcol">
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{item.name}}" name="name">
@@ -35,7 +35,7 @@
         <label>Overload:</label>
         <input type="text" value="{{data.rating.overload}}" name="data.rating.overload">
     </div>
-    <div class="flexcol">
+    <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
