--- a/templates/item/item-malignancy-sheet.html
+++ b/templates/item/item-malignancy-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} flexcol">
+<form class="{{cssClass}} item-sheet flexcol">
     
     <div class="flexcol">
         <label>Name:</label>
@@ -19,7 +19,7 @@
 
     </div>
 
-    <div class="flexcol">
+    <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
