--- a/templates/item/item-meleeWeapon-sheet.html
+++ b/templates/item/item-meleeWeapon-sheet.html
@@ -1,10 +1,10 @@
-<form class="{{cssClass}} flexcol">
+<form class="{{cssClass}} item-sheet flexcol">
     <div class="grid grid-3col">
         <div class="flexcol">
             <label>Name:</label>
             <input type="text" value="{{item.name}}" name="name">
         </div>
-       
+
         <div class="flexcol">
             <label>Reach:</label>
             <input type="text" value="{{data.range.value}}" name="data.range.value">
@@ -33,10 +33,10 @@
         </div>
         <div class="flexcol">
             <label>Weapon Class:</label>
-            
+
             <select class="weapon-type"  name="data.class.value">
                 {{#select data.class.value}}
-                 {{#each item.FORTYK.meleeWeaponClasses}}
+                {{#each item.FORTYK.meleeWeaponClasses}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
@@ -50,37 +50,41 @@
         {{/if}}
         <div class="flexcol">
             <label>Weapon Type:</label>
-            
+
             <select class="weapon-type"  name="data.type.value">
                 {{#select data.type.value}}
-                 {{#each item.FORTYK.meleeWeaponTypes}}
+                {{#each item.FORTYK.meleeWeaponTypes}}
                 <option value="{{this}}">{{this}}</option>
                 {{/each}}
                 {{/select}}
             </select>
         </div>
         <div class="flexcol">
-        <label>Rarity:</label>
-        <select class="power-type" name="data.rarity.value">
-            {{#select data.rarity.value}}
-            <option value="100">Ubiquitous</option>
-            <option value="30">Abundant</option>  
-            <option value="20">Plentiful</option>
-            <option value="10">Common</option> 
-            <option value="0">Average</option>
-            <option value="-10">Scarce</option> 
-            <option value="-20">Rare</option>
-            <option value="-30">Very rare</option> 
-            <option value="-40">Extremely rare</option>
-            <option value="-50">Near Unique</option>
-            <option value="-60">Unique</option>
+            <label>Rarity:</label>
+            <select class="power-type" name="data.rarity.value">
+                {{#select data.rarity.value}}
+                <option value="100">Ubiquitous</option>
+                <option value="30">Abundant</option>  
+                <option value="20">Plentiful</option>
+                <option value="10">Common</option> 
+                <option value="0">Average</option>
+                <option value="-10">Scarce</option> 
+                <option value="-20">Rare</option>
+                <option value="-30">Very rare</option> 
+                <option value="-40">Extremely rare</option>
+                <option value="-50">Near Unique</option>
+                <option value="-60">Unique</option>
 
 
-            {{/select}}
-        </select>
+                {{/select}}
+            </select>
+        </div>
+        <div class="flexcol">
+            <label>Weight:</label>
+            <input type="text" value="{{data.weight.value}}" name="data.weight.value">
+        </div>
     </div>
-    </div>
-    <div class="flexcol">
+    <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
