--- a/templates/item/item-talentntrait-sheet.html
+++ b/templates/item/item-talentntrait-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} flexcol">
+<form class="{{cssClass}} item-sheet flexcol">
     <div class="flexcol">
         <label>Name:</label>
         <input type="text" value="{{item.name}}" name="name">
@@ -7,7 +7,7 @@
         <label>Aptitudes:</label>
         <input type="text" value="{{data.aptitudes.value}}" name="data.aptitudes.value">
     </div>
-    <div class="flexcol">
+    <div class="item-description">
         <label>Description:</label>
         {{editor content=data.description.value target="data.description.value" button=true owner=owner editable=editable}}
     </div>
