--- a/templates/item/item-meleeWeapon-sheet.html
+++ b/templates/item/item-meleeWeapon-sheet.html
@@ -15,7 +15,7 @@
         </div>
         <div class="flexcol">
             <label>Penetration:</label>
-            <input type="text" value="{{data.pen.value}}" name="data.pen.value" data-dtype="Number">
+            <input type="text" value="{{data.pen.value}}" name="data.pen.value" data-dtype="String">
         </div>
         <div class="flexcol">
             <label>Special:</label>
