--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -3,7 +3,7 @@
     {{!-- Sheet Header --}}
     <header class="sheet-header flexrow">
         
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
+        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
         {{!-- Sheet Tab Navigation --}}
         <nav class="sheet-tabs tabs grid grid-4col" data-group="primary">
             
