--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -6,7 +6,7 @@
         <span class="chat-line">{{rollResult}}</span>
         <span class="chat-line">{{target}}</span>   
     </div>
-    <span class="chat-line">{{pass}}</span>
+    <span class="chat-line {{#if success}}test-success{{else}}test-failure{{/if}}">{{pass}}</span>
     <span class="roll-result">{{dos}}</span>
     {{#unless reroll}}
     <a class="button reroll" data-actor="{{actor}}" data-char="{{char}}" data-roll-type="{{type}}" data-target="{{targetNumber}}" data-label="{{label}}">Reroll</a>
