made damage work!
damage applies to tokens and it also handles crit effects and you can do stuff like multihits or even apply to several targets its neat

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -358,6 +358,7 @@
     width:30px !important; 
     height:30px !important;
     margin-left:3px;
+    display:inherit;
 }
 .fortyk .item-delete{
     background-image: url("../icons/deleteicon.png") !important; 
@@ -366,6 +367,7 @@
     width:30px !important;
     height:30px !important;
     margin-left:3px;
+    display:inherit;
 }
 
 
