--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -107,20 +107,131 @@
 
 
     </div>
+    <div class="flexrow">
+                <a class="item-create button" data-type="rangedWeapon" title="Add a Ranged Weapon">Add ranged weapon</a>
+                <a class="item-create button" data-type="meleeWeapon" title="Add a Melee Weapon">Add melee weapon</a>
+            </div>
+
+            <div>
+                {{#each actor.meleeWeapons}}
+                <div class="weapons grid grid-4col">
+                    <div class="list-item">
+                        <span>Name: {{this.name}}</span>
+                    </div>
+
+                    <div class="list-item">
+                        <span>Reach: {{this.data.range.value}}</span>
+                    </div>
+                    <div class="list-item">
+                        <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-weapon="this._id" data-label="Melee Attack" data-char="ws">Attack Roll</span>
+                    </div>
+                    <div class="list-item">
+                        <span>Damage: </span>
+                        <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}+@characteristics.s.bonus" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}+{{../data.characteristics.s.bonus}}</a>
+                    </div>
+                    <div class="list-item">
+                        <span>Penetration: {{this.data.pen.value}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Special: {{this.data.special.value}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Damage Type: {{this.data.damageType.value}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Weapon Class: {{this.data.class.value}}</span>
+
+
+                    </div>
+                    <div class="list-item">
+                        <span>Weapon Type: {{this.data.type.value}}</span>
+
+
+                    </div>
+                    <div class="list-item flexrow">
+                        <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
+                            <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
+                    </div>
+                </div>
+               
+                {{/each}}
+                {{#each actor.rangedWeapons}}
+                <div class="weapons grid grid-4col">
+                    <div class="list-item">
+                        <span>Name: {{this.name}}</span>
+                    </div>
+
+                    <div class="list-item">
+                        <span>Range: {{this.data.range.value}}</span>
+                    </div>
+                    <div class="list-item">
+                        <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-weapon="this._id" data-label="Ranged Attack" data-char="bs">Attack Roll</span>
+                    </div>
+                    <div class="list-item">
+                        <span>Damage: </span>
+                        <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Penetration: {{this.data.pen.value}}</span>
+
+                    </div>
+                    <div class="list-item flexrow">
+                        <span>Clip: </span>
+
+                        <input class="clip-current" type="text" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
+                        <span> / </span>
+                        <span>{{this.data.clip.max}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Reload: {{this.data.reload.value}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Special: {{this.data.special.value}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Damage Type: {{this.data.damageType.value}}</span>
+
+                    </div>
+                    <div class="list-item">
+                        <span>Weapon Class: {{this.data.class.value}}</span>
+
+
+                    </div>
+                    <div class="list-item">
+                        <span>Weapon Type: {{this.data.type.value}}</span>
+
+
+                    </div>
+                    <div class="list-item flexrow">
+                        <span>
+                        <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
+                        <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
+                            </span>
+                    </div>
+
+                </div>
+                {{/each}}
+            </div>
     <div class="grid grid-2col">
 
         <div class="flexcol">
 
-            <input type="text" name="data.damage.formula" value="{{data.damage.formula}}">
-            <a class="damage-roll button" data-label="damage"data-formula="{{data.damage.formula}}">{{data.damage.formula}}</a>
+
             <span class="section-title">SIZE</span>
             <select class="sizeSelect" name="data.secChar.size.value" data-dtype="Number">
                 {{#select data.secChar.size.value}}
-                
+
                 {{#each size}}
-                
+
                 <option value="{{@index}}">{{this.name}}</option>
-               
+
                 {{/each}}
                 {{/select}}
             </select>
@@ -211,18 +322,19 @@
             </div>
         </div>
         <div class="flexcol npcskillntraits">
-            <div>
-             <span class="section-title">Equipment</span>
-            {{editor content=data.equipment.value target="data.equipment.value" button=true owner=owner editable=editable}}
-           </div>
-            <div>
             
-            <span class="section-title">Talents & Traits</span>
-            {{editor content=data.talentntraits.value target="data.talentntraits.value" button=true owner=owner editable=editable}}
+            <div>
+                <span class="section-title">Equipment</span>
+                {{editor content=data.equipment.value target="data.equipment.value" button=true owner=owner editable=editable}}
             </div>
             <div>
-            <span class="section-title">Skills</span>
-            {{editor content=data.skills.value target="data.skills.value" button=true owner=owner editable=editable}}
+
+                <span class="section-title">Talents & Traits</span>
+                {{editor content=data.talentsntraits.value target="data.talentsntraits.value" button=true owner=owner editable=editable}}
+            </div>
+            <div>
+                <span class="section-title">Skills</span>
+                {{editor content=data.skills.value target="data.skills.value" button=true owner=owner editable=editable}}
             </div>
         </div>
     </div>
