added fear and perils
added fear and perils logic, also added sustaining psy powers and refactored the socket damage thing so i can use it for ore things later.

--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -521,3 +521,9 @@
     background-image: "" !important;
     color: white !important;
 }
+.power-push{
+    border-color: red !important;
+}
+.power-safe{
+    border-color: green !important;
+}
